calculatrice avec prise en charge des priorités

--- a/index.html
+++ b/index.html
@@ -13,42 +13,43 @@
             <section>
                 <div class="calculatrice">
                     <div class="answer">
-                        <p id="final_answer">150</p>
+                        <span id="final_answer"></span>
                     </div>
-                    <div class="button">
-                        <div class="range_1">
-                            <button class="division">/</button>
-                            <button class="multiple">×</button>                            
-                            <button class="soustraction">-</button>
-                            <button class="addition">+</button>
+                    <div id="button">
+                        <div id="range_1">
+                            <button id="division">/</button>
+                            <button id="multiple">×</button>                            
+                            <button id="soustraction">-</button>
+                            <button id="addition">+</button>
                         </div>
                         <div class="range_2">
-                            <button class="seven">7</button>
-                            <button class="eight">8</button>                            
-                            <button class="nine">9</button>
-                            <button class="equal">=</button>
+                            <button id="seven">7</button>
+                            <button id="eight">8</button>                            
+                            <button id="nine">9</button>
+                            <button id="equal">=</button>
                         </div>
-                        <div class="range_3">
-                            <button class="four">4</button>
-                            <button class="five">5</button>                            
-                            <button class="six">6</button>
-                            <button class="power">^</button>
+                        <div id="range_3">
+                            <button id="four">4</button>
+                            <button id="five">5</button>                            
+                            <button id="six">6</button>
+                            <button id="power">^</button>
                         </div>
-                        <div class="range_4">
-                            <button class="one">1</button>
-                            <button class="two">2</button>                            
-                            <button class="three">3</button>
-                            <button class="dot">.</button>
+                        <div id="range_4">
+                            <button id="one">1</button>
+                            <button id="two">2</button>                            
+                            <button id="three">3</button>
+                            <button id="dot">.</button>
                         </div>
-                        <div class="range_5">
-                            <button class="left_parenth">(</button>
-                            <button class="zero">0</button>                            
-                            <button class="right_parenth">)</button>
-                            <button class="delete">del</button>
+                        <div id="range_5">
+                            <button id="left_parenth">(</button>
+                            <button id="zero">0</button>                            
+                            <button id="right_parenth">)</button>
+                            <button id="delete">del</button>
                         </div>
                     </div>
                 </div>
             </section>
         </main>
+        <script type="text/javascript" src="calcul.js"></script>
     </body>
 </html>
